Fix youtube embeds on mobile being too wide

--- a/_sass/_custom-styles.scss
+++ b/_sass/_custom-styles.scss
@@ -9,3 +9,8 @@ p {
 h1.post-title {
   line-height: 58px;
 }
+
+/* For youtube embeds on mobile */
+iframe {
+  max-width:100%;
+}
